--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,3 @@
-google-generativeai==0.3.2
-pymupdf==1.23.7
-pdfplumber==0.10.2
-pytesseract==0.3.10
-python-dotenv==1.0.0
-pillow==10.2.0
-numpy==1.26.3
-pytest==7.4.4
-pytest-asyncio==0.23.5
-aiohttp==3.9.3
+PyMuPDF==1.22.5  # PDF processing
+Pillow>=11.1.0  # Image processing and WebP support
+beautifulsoup4>=4.12.0  # HTML parsing
