--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
@@ -18,15 +19,26 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+
+# Virtual Environment
 .env
 .venv
 env/
 venv/
 ENV/
-env.bak/
-venv.bak/
+
+# IDE
 .idea/
 .vscode/
 *.swp
-.DS_Store
+*.swo
+
+# Project specific
 output/
+tests/sample_pdfs/images/
+*.pdf
+!tests/sample_pdfs/*.pdf
+
+# OS
+.DS_Store
+Thumbs.db
